fix: rendre visible la poignée de drag

--- a/wp-content/themes/chassesautresor/assets/scss/_enigme.scss
+++ b/wp-content/themes/chassesautresor/assets/scss/_enigme.scss
@@ -270,6 +270,7 @@ li.active .enigme-menu__edit {
     background-color: rgba(var(--color-black-rgb, 0, 0, 0), 0.6);
     color: var(--color-white);
     pointer-events: none;
+    z-index: 10;
   }
 }
 
